--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QuickNotes</title>
+  <title>QuickNotes - Efficient Markdown Note-Taking App | Free, Fast, and Secure</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="description" content="QuickNotes is a fast, free markdown-based note-taking app built on Angular and Firebase. Create, organize, and access notes in real-time from any device. Perfect for students, professionals, and teams.">
+  <meta name="keywords" content="markdown note-taking app, free note app, angular note app, firebase storage, cross-platform notes">
 </head>
 <body class="mat-typography">
   <qn-root></qn-root>
